begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
begin_comment
comment|/*  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  *  with the License.  You may obtain a copy of the License at  *  *      http://www.apache.org/licenses/LICENSE-2.0  *  *  Unless required by applicable law or agreed to in writing, software  *  distributed under the License is distributed on an "AS IS" BASIS,  *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  *  See the License for the specific language governing permissions and  *  limitations under the License.  */
end_comment

begin_package
DECL|package|org.apache.hadoop.ozone.web.storage
package|package
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|web
operator|.
name|storage
package|;
end_package

begin_import
import|import
name|com
operator|.
name|google
operator|.
name|common
operator|.
name|annotations
operator|.
name|VisibleForTesting
import|;
end_import

begin_import
import|import
name|com
operator|.
name|google
operator|.
name|common
operator|.
name|base
operator|.
name|Preconditions
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hdfs
operator|.
name|ozone
operator|.
name|protocol
operator|.
name|proto
operator|.
name|ContainerProtos
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hdfs
operator|.
name|server
operator|.
name|datanode
operator|.
name|fsdataset
operator|.
name|LengthInputStream
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ksm
operator|.
name|helpers
operator|.
name|KsmKeyInfo
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ksm
operator|.
name|helpers
operator|.
name|KsmKeyLocationInfo
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|scm
operator|.
name|XceiverClientManager
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|scm
operator|.
name|XceiverClientSpi
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|scm
operator|.
name|container
operator|.
name|common
operator|.
name|helpers
operator|.
name|Pipeline
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|scm
operator|.
name|protocolPB
operator|.
name|StorageContainerLocationProtocolClientSideTranslatorPB
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|scm
operator|.
name|storage
operator|.
name|ChunkInputStream
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|scm
operator|.
name|storage
operator|.
name|ContainerProtocolCalls
import|;
end_import

begin_import
import|import
name|org
operator|.
name|slf4j
operator|.
name|Logger
import|;
end_import

begin_import
import|import
name|org
operator|.
name|slf4j
operator|.
name|LoggerFactory
import|;
end_import

begin_import
import|import
name|java
operator|.
name|io
operator|.
name|IOException
import|;
end_import

begin_import
import|import
name|java
operator|.
name|io
operator|.
name|InputStream
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|ArrayList
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|List
import|;
end_import

begin_comment
comment|/**  * Maintaining a list of ChunkInputStream. Read based on offset.  */
end_comment

begin_class
DECL|class|ChunkGroupInputStream
specifier|public
class|class
name|ChunkGroupInputStream
extends|extends
name|InputStream
block|{
DECL|field|LOG
specifier|private
specifier|static
specifier|final
name|Logger
name|LOG
init|=
name|LoggerFactory
operator|.
name|getLogger
argument_list|(
name|ChunkGroupInputStream
operator|.
name|class
argument_list|)
decl_stmt|;
DECL|field|EOF
specifier|private
specifier|static
specifier|final
name|int
name|EOF
init|=
operator|-
literal|1
decl_stmt|;
DECL|field|streamEntries
specifier|private
specifier|final
name|ArrayList
argument_list|<
name|ChunkInputStreamEntry
argument_list|>
name|streamEntries
decl_stmt|;
DECL|field|currentStreamIndex
specifier|private
name|int
name|currentStreamIndex
decl_stmt|;
DECL|method|ChunkGroupInputStream ()
specifier|public
name|ChunkGroupInputStream
parameter_list|()
block|{
name|streamEntries
operator|=
operator|new
name|ArrayList
argument_list|<>
argument_list|()
expr_stmt|;
name|currentStreamIndex
operator|=
literal|0
expr_stmt|;
block|}
annotation|@
name|VisibleForTesting
DECL|method|getCurrentStreamIndex ()
specifier|public
specifier|synchronized
name|int
name|getCurrentStreamIndex
parameter_list|()
block|{
return|return
name|currentStreamIndex
return|;
block|}
annotation|@
name|VisibleForTesting
DECL|method|getRemainingOfIndex (int index)
specifier|public
name|long
name|getRemainingOfIndex
parameter_list|(
name|int
name|index
parameter_list|)
block|{
return|return
name|streamEntries
operator|.
name|get
argument_list|(
name|index
argument_list|)
operator|.
name|getRemaining
argument_list|()
return|;
block|}
comment|/**    * Append another stream to the end of the list.    *    * @param stream the stream instance.    * @param length the max number of bytes that should be written to this    *               stream.    */
DECL|method|addStream (InputStream stream, long length)
specifier|public
specifier|synchronized
name|void
name|addStream
parameter_list|(
name|InputStream
name|stream
parameter_list|,
name|long
name|length
parameter_list|)
block|{
name|streamEntries
operator|.
name|add
argument_list|(
operator|new
name|ChunkInputStreamEntry
argument_list|(
name|stream
argument_list|,
name|length
argument_list|)
argument_list|)
expr_stmt|;
block|}
annotation|@
name|Override
DECL|method|read ()
specifier|public
specifier|synchronized
name|int
name|read
parameter_list|()
throws|throws
name|IOException
block|{
if|if
condition|(
name|streamEntries
operator|.
name|size
argument_list|()
operator|<=
name|currentStreamIndex
condition|)
block|{
throw|throw
operator|new
name|IndexOutOfBoundsException
argument_list|()
throw|;
block|}
name|ChunkInputStreamEntry
name|entry
init|=
name|streamEntries
operator|.
name|get
argument_list|(
name|currentStreamIndex
argument_list|)
decl_stmt|;
name|int
name|data
init|=
name|entry
operator|.
name|read
argument_list|()
decl_stmt|;
return|return
name|data
return|;
block|}
annotation|@
name|Override
DECL|method|read (byte[] b, int off, int len)
specifier|public
specifier|synchronized
name|int
name|read
parameter_list|(
name|byte
index|[]
name|b
parameter_list|,
name|int
name|off
parameter_list|,
name|int
name|len
parameter_list|)
throws|throws
name|IOException
block|{
if|if
condition|(
name|b
operator|==
literal|null
condition|)
block|{
throw|throw
operator|new
name|NullPointerException
argument_list|()
throw|;
block|}
if|if
condition|(
name|off
operator|<
literal|0
operator|||
name|len
argument_list|<
literal|0
operator|||
name|len
argument_list|>
name|b
operator|.
name|length
operator|-
name|off
condition|)
block|{
throw|throw
operator|new
name|IndexOutOfBoundsException
argument_list|()
throw|;
block|}
if|if
condition|(
name|len
operator|==
literal|0
condition|)
block|{
return|return
literal|0
return|;
block|}
name|int
name|totalReadLen
init|=
literal|0
decl_stmt|;
while|while
condition|(
name|len
operator|>
literal|0
condition|)
block|{
if|if
condition|(
name|streamEntries
operator|.
name|size
argument_list|()
operator|<=
name|currentStreamIndex
condition|)
block|{
return|return
name|totalReadLen
operator|==
literal|0
condition|?
name|EOF
else|:
name|totalReadLen
return|;
block|}
name|ChunkInputStreamEntry
name|current
init|=
name|streamEntries
operator|.
name|get
argument_list|(
name|currentStreamIndex
argument_list|)
decl_stmt|;
name|int
name|readLen
init|=
name|Math
operator|.
name|min
argument_list|(
name|len
argument_list|,
operator|(
name|int
operator|)
name|current
operator|.
name|getRemaining
argument_list|()
argument_list|)
decl_stmt|;
name|int
name|actualLen
init|=
name|current
operator|.
name|read
argument_list|(
name|b
argument_list|,
name|off
argument_list|,
name|readLen
argument_list|)
decl_stmt|;
comment|// this means the underlying stream has nothing at all, return
if|if
condition|(
name|actualLen
operator|==
name|EOF
condition|)
block|{
return|return
name|totalReadLen
operator|>
literal|0
condition|?
name|totalReadLen
else|:
name|EOF
return|;
block|}
name|totalReadLen
operator|+=
name|actualLen
expr_stmt|;
comment|// this means there is no more data to read beyond this point, return
if|if
condition|(
name|actualLen
operator|!=
name|readLen
condition|)
block|{
return|return
name|totalReadLen
return|;
block|}
name|off
operator|+=
name|readLen
expr_stmt|;
name|len
operator|-=
name|readLen
expr_stmt|;
if|if
condition|(
name|current
operator|.
name|getRemaining
argument_list|()
operator|<=
literal|0
condition|)
block|{
name|currentStreamIndex
operator|+=
literal|1
expr_stmt|;
block|}
block|}
return|return
name|totalReadLen
return|;
block|}
DECL|class|ChunkInputStreamEntry
specifier|private
specifier|static
class|class
name|ChunkInputStreamEntry
extends|extends
name|InputStream
block|{
DECL|field|inputStream
specifier|private
specifier|final
name|InputStream
name|inputStream
decl_stmt|;
DECL|field|length
specifier|private
specifier|final
name|long
name|length
decl_stmt|;
DECL|field|currentPosition
specifier|private
name|long
name|currentPosition
decl_stmt|;
DECL|method|ChunkInputStreamEntry (InputStream chunkInputStream, long length)
name|ChunkInputStreamEntry
parameter_list|(
name|InputStream
name|chunkInputStream
parameter_list|,
name|long
name|length
parameter_list|)
block|{
name|this
operator|.
name|inputStream
operator|=
name|chunkInputStream
expr_stmt|;
name|this
operator|.
name|length
operator|=
name|length
expr_stmt|;
name|this
operator|.
name|currentPosition
operator|=
literal|0
expr_stmt|;
block|}
DECL|method|getRemaining ()
specifier|synchronized
name|long
name|getRemaining
parameter_list|()
block|{
return|return
name|length
operator|-
name|currentPosition
return|;
block|}
annotation|@
name|Override
DECL|method|read (byte[] b, int off, int len)
specifier|public
specifier|synchronized
name|int
name|read
parameter_list|(
name|byte
index|[]
name|b
parameter_list|,
name|int
name|off
parameter_list|,
name|int
name|len
parameter_list|)
throws|throws
name|IOException
block|{
name|int
name|readLen
init|=
name|inputStream
operator|.
name|read
argument_list|(
name|b
argument_list|,
name|off
argument_list|,
name|len
argument_list|)
decl_stmt|;
name|currentPosition
operator|+=
name|readLen
expr_stmt|;
return|return
name|readLen
return|;
block|}
annotation|@
name|Override
DECL|method|read ()
specifier|public
specifier|synchronized
name|int
name|read
parameter_list|()
throws|throws
name|IOException
block|{
name|int
name|data
init|=
name|inputStream
operator|.
name|read
argument_list|()
decl_stmt|;
name|currentPosition
operator|+=
literal|1
expr_stmt|;
return|return
name|data
return|;
block|}
annotation|@
name|Override
DECL|method|close ()
specifier|public
specifier|synchronized
name|void
name|close
parameter_list|()
throws|throws
name|IOException
block|{
name|inputStream
operator|.
name|close
argument_list|()
expr_stmt|;
block|}
block|}
DECL|method|getFromKsmKeyInfo (KsmKeyInfo keyInfo, XceiverClientManager xceiverClientManager, StorageContainerLocationProtocolClientSideTranslatorPB storageContainerLocationClient, String requestId)
specifier|public
specifier|static
name|LengthInputStream
name|getFromKsmKeyInfo
parameter_list|(
name|KsmKeyInfo
name|keyInfo
parameter_list|,
name|XceiverClientManager
name|xceiverClientManager
parameter_list|,
name|StorageContainerLocationProtocolClientSideTranslatorPB
name|storageContainerLocationClient
parameter_list|,
name|String
name|requestId
parameter_list|)
throws|throws
name|IOException
block|{
name|int
name|index
init|=
literal|0
decl_stmt|;
name|long
name|length
init|=
literal|0
decl_stmt|;
name|String
name|containerKey
decl_stmt|;
name|ChunkGroupInputStream
name|groupInputStream
init|=
operator|new
name|ChunkGroupInputStream
argument_list|()
decl_stmt|;
for|for
control|(
name|KsmKeyLocationInfo
name|ksmKeyLocationInfo
range|:
name|keyInfo
operator|.
name|getKeyLocationList
argument_list|()
control|)
block|{
comment|// check index as sanity check
name|Preconditions
operator|.
name|checkArgument
argument_list|(
name|index
operator|++
operator|==
name|ksmKeyLocationInfo
operator|.
name|getIndex
argument_list|()
argument_list|)
expr_stmt|;
name|String
name|containerName
init|=
name|ksmKeyLocationInfo
operator|.
name|getContainerName
argument_list|()
decl_stmt|;
name|Pipeline
name|pipeline
init|=
name|storageContainerLocationClient
operator|.
name|getContainer
argument_list|(
name|containerName
argument_list|)
decl_stmt|;
name|XceiverClientSpi
name|xceiverClient
init|=
name|xceiverClientManager
operator|.
name|acquireClient
argument_list|(
name|pipeline
argument_list|)
decl_stmt|;
name|boolean
name|success
init|=
literal|false
decl_stmt|;
name|containerKey
operator|=
name|ksmKeyLocationInfo
operator|.
name|getBlockID
argument_list|()
expr_stmt|;
try|try
block|{
name|LOG
operator|.
name|debug
argument_list|(
literal|"get key accessing {} {}"
argument_list|,
name|xceiverClient
operator|.
name|getPipeline
argument_list|()
operator|.
name|getContainerName
argument_list|()
argument_list|,
name|containerKey
argument_list|)
expr_stmt|;
name|ContainerProtos
operator|.
name|KeyData
name|containerKeyData
init|=
name|OzoneContainerTranslation
operator|.
name|containerKeyDataForRead
argument_list|(
name|xceiverClient
operator|.
name|getPipeline
argument_list|()
operator|.
name|getContainerName
argument_list|()
argument_list|,
name|containerKey
argument_list|)
decl_stmt|;
name|ContainerProtos
operator|.
name|GetKeyResponseProto
name|response
init|=
name|ContainerProtocolCalls
operator|.
name|getKey
argument_list|(
name|xceiverClient
argument_list|,
name|containerKeyData
argument_list|,
name|requestId
argument_list|)
decl_stmt|;
name|List
argument_list|<
name|ContainerProtos
operator|.
name|ChunkInfo
argument_list|>
name|chunks
init|=
name|response
operator|.
name|getKeyData
argument_list|()
operator|.
name|getChunksList
argument_list|()
decl_stmt|;
for|for
control|(
name|ContainerProtos
operator|.
name|ChunkInfo
name|chunk
range|:
name|chunks
control|)
block|{
name|length
operator|+=
name|chunk
operator|.
name|getLen
argument_list|()
expr_stmt|;
block|}
name|success
operator|=
literal|true
expr_stmt|;
name|ChunkInputStream
name|inputStream
init|=
operator|new
name|ChunkInputStream
argument_list|(
name|containerKey
argument_list|,
name|xceiverClientManager
argument_list|,
name|xceiverClient
argument_list|,
name|chunks
argument_list|,
name|requestId
argument_list|)
decl_stmt|;
name|groupInputStream
operator|.
name|addStream
argument_list|(
name|inputStream
argument_list|,
name|ksmKeyLocationInfo
operator|.
name|getLength
argument_list|()
argument_list|)
expr_stmt|;
block|}
finally|finally
block|{
if|if
condition|(
operator|!
name|success
condition|)
block|{
name|xceiverClientManager
operator|.
name|releaseClient
argument_list|(
name|xceiverClient
argument_list|)
expr_stmt|;
block|}
block|}
block|}
return|return
operator|new
name|LengthInputStream
argument_list|(
name|groupInputStream
argument_list|,
name|length
argument_list|)
return|;
block|}
block|}
end_class

end_unit

